2017-11-22  Per Bothner  <per@bothner.com>

	* ConsumerTarget.java (compileFromStack): Fix unsigned value.
	Fixes GitLab issue #27
	"unsigned uniform vector refs returning signed values".

2017-09-24  Per Bothner  <per@bothner.com>

	* LitTable.java: Tweak how literal values are mapped to static fields.
	If the value implements HasOwningField, use specified field.
	* HasOwningField.java: New interface.

2017-08-30  Per Bothner  <per@bothner.com>

	* Mangling.java: Use old-style non-symbolic mangling for Android.
	(USE_SYMBOLIC): Static to control mangling style.

2017-08-29  Per Bothner  <per@bothner.com>

	* Compilation.java (loadCallContext): Use auto-poppable scope for $ctx.
	Fixes bug reported by Kay Zheng, where Android's dex would
	complain about overlapping entries in LocalVariableTable attribute.

2017-08-28  Per Bothner  <per@bothner.com>

	* Compilation.java (warnUninitialized): New option.
	* InlineCalls (visitReferenceExp): Check warnUninitialized.

	* InlineCalls.java (visitSetExp): Fix value tracker.
	Specifically, update variable value *after* visiting new value.
	This fixes gitlab issue #3 "Crash (JVM exit) on malformed letrec".

2017-08-26  Per Bothner  <per@bothner.com>

	Move heap-frame for an inlined function "out" to its caller.
	This reduces number of classes and number of object allocations.
	This also fixes Issue #11 on GitLab
	'"attempting to push dead variable" error on loading Alexpander'.
	* LambdaExp.java (getHeapFrame): New method. Loop through inlineHome.
	(useClassForFrame): New method.
	* Compilation.java: Related changes for modules instances and frames.
	* ModuleExp.java (allocChildClasses): Do call allocFrame.

2017-08-08  Per Bothner  <per@bothner.com>

	* LambdaExp.java (allocChildClasses): Handle unnamed declaration.

2017-08-05  Per Bothner  <per@bothner.com>

	* ModuleExp.java (allocFields): Skip creating field
	if SKIP_FOR_METHOD_PARAMETER is set.

2017-07-24  Per Bothner  <per@bothner.com>
